<!--
  ~ strings.xml Created by Samiur Prapon
  ~ Last modified  7/30/21, 6:23 PM
  ~ Copyright (c) 2021. All rights reserved.
  ~
  -->

<resources>
  <string name="app_name">Aether</string>

  <!-- Placeholders   -->
  <string name="demo_welcome_message">Hello Harry</string>
  <string name="demo_course_count">9</string>
  <string name="demo_course_instructor_name">by Walter White</string>
  <string name="demo_course_progress_value">83%</string>
  <string name="demo_course_complete">11</string>
  <string name="demo_course_name">Bio-organic Chemistry I</string>
  <string name="demo_course_name_2">Software Engineering</string>
  <string name="demo_course_instructor">Jesse Pinkman</string>
  <string name="demo_course_semester">Semester:</string>

  <!-- Authentication   -->
  <string name="title_email_address">Email</string>
  <string name="title_password">Password</string>
  <string name="title_re_type_password">Re-type password</string>
  <string name="title_select_user_type">I am -</string>
  <string name="student">Student</string>
  <string name="teacher">Teacher</string>
  <string name="title_create_an_account">Create an Account</string>
  <string name="title_register">Register</string>
  <string name="title_existing_member">Already a member?</string>
  <string name="sign_in">Sign in</string>
  <string name="forget_password">Forgot Password?</string>

  <!--  Bottom Navigation  -->
  <string name="nav_item_home">Home</string>
  <string name="nav_item_course">Course</string>
  <string name="nav_item_class">Class</string>
  <string name="nav_item_exam">Exam</string>
  <string name="nav_item_more">More</string>
  <string name="nav_item_edit">Edit</string>
  <string name="nav_item_profile">Profile</string>

  <!--  Student Home Fragment  -->
  <string name="title_welcome_sub">It\'s good to see you again</string>
  <string name="title_course_complete">Courses\nCompleted</string>
  <string name="title_course_in_progress">Courses\nIn Progress</string>
  <string name="tittle_ongoing">Ongoing</string>
  <string name="title_learning_growth">Learning Growth</string>

  <!--  Student Course Fragment  -->
  <string name="title_start">start</string>
  <string name="title_course_study_materials">what will we\nstudy today?</string>
  <string name="title_ongoing_course">Ongoing</string>
  <string name="title_archived_course">Archive</string>
  <string name="title_by">by</string>
  <string name="title_enroll">Enroll</string>
  <string name="title_enroll_course">Enter Course Enroll Code</string>
  <string name="title_enroll_code">Enroll Code</string>

  <!--  Student Class Fragment  -->
  <string name="title_today_class">Today\’s Class</string>
  <string name="title_class_recordings">Class Recordings</string>
  <string name="title_no_classes">No classes</string>
  <string name="description_no_class">No classes left to attend</string>

  <!--  Student exam Fragment  -->
  <string name="title_assigned_tasks">Assigned tasks</string>
  <string name="title_already_submitted">Already Submitted</string>
  <string name="title_no_tasks">No tasks left</string>
  <string name="description_no_tasks">You’ve done a great job</string>

  <!--  Student More Fragment  -->
  <string name="title_reminders">Reminders</string>
  <string name="placeholder_app_version">App version : 0.0.1</string>
  <string name="title_app_settings">App Settings</string>
  <string name="title_privacy_policy">Privacy Policy</string>
  <string name="title_terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
  <string name="logout">Logout</string>
  <string name="user_profile_imageview">User Profile ImageView</string>
  <string name="save">Save</string>
  <string name="female">Female</string>
  <string name="male">Male</string>
  <string name="gender">SEX</string>
  <string name="name">Name</string>
  <string name="student_id">Student Id</string>

  <!--  Student More Fragment  -->
  <string name="title_profile">Profile</string>
  <string name="title_edit_profile">Edit Profile</string>
  <string name="title_name">NAME</string>
  <string name="title_student_id">STUDENT ID</string>
  <string name="title_email">EMAIL</string>
  <string name="title_school">SCHOOL</string>
  <string name="title_gender">GENDER</string>
  <string name="title_date_of_birth">DATE OF BIRTH</string>

  <!-- Teacher Home Fragment -->
  <string name="open">open</string>
  <string name="close">close</string>
  <string name="appbar_teacher">It’s good to see you again.</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_dashboard_monthly_earning">This Month’s Earning</string>
  <string name="title_dashboard_total_course">Total Courses</string>
  <string name="title_dashboard_task_in_progress">Task in Progress</string>
  <string name="title_dashboard_grade_submission_remaining">Grade Submission</string>
  <string name="title_monthly_earning">Monthly Earning</string>
  <string name="title_courses">Courses</string>
  <string name="title_remaining_task">Remaining Task</string>

  <!-- Teacher Course Fragment -->
  <string name="search_bar_hint">   Search material or people</string>
  <string name="title_all_student">All Student</string>F
  <string name="title_student_status">Student Status</string>
  <string name="title_task">Assigned Task</string>
  <string name="intent_course_name">Course Name</string>
  <string name="intent_course_id">Course Id</string>
  <string name="title_delete_course">Delete Course</string>
  <string name="title_course_code">Course Code</string>
  <string name="title_course_semester">Semester</string>
  <string name="title_course_section">Section</string>
  <string name="title_add_course">Add Course</string>
  <string name="title_edit_course">Edit Course</string>

  <!-- Teacher profile Fragment -->
  <string name="title_initial">INITIAL</string>
  <string name="title_update">Update</string>

  <!-- Fragment's List -->
  <string name="selected_fragment">Selected Fragment</string>
  <string name="teacher_profile_edit">Teacher Profile Edit</string>
  <string name="teacher_course">Teacher Course</string>
  <string name="teacher_modify_course">Teacher Modify Course</string>

</resources>