<?xml version="1.0" encoding="utf-8"?><!--
  ~ dialog_enroll_course.xml Created by Mahfuj Ahmed Jim
  ~ Last modified  3/8/23, 10:48 AM
  ~ Copyright (c) 2023. All rights reserved.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="30dp"
    android:paddingHorizontal="24dp"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/appCompatTextView3"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:elevation="2dp"
        android:fontFamily="@font/primary_bold"
        android:text="@string/title_enroll_course"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <EditText
        android:id="@+id/et_enroll"
        android:hint="@string/title_enroll_code"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_enroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/primary_bold"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text="@string/title_enroll"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_enroll">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>