<?xml version="1.0" encoding="utf-8"?><!--
  ~ activity_student_home.xml Created by Samiur Prapon
  ~ Last modified  7/30/21, 6:23 PM
  ~ Copyright (c) 2021. All rights reserved.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.student.StudentHomeActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/nav_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/nav_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nav_bg_color"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingTop="8dp"
        android:paddingEnd="0dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_item_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:bt_active="true"
            app:bt_colorActive="@color/white"
            app:bt_colorInactive="@color/white"
            app:bt_icon="@drawable/ic_home"
            app:bt_shape="@drawable/transition_background_drawable"
            app:bt_title="@string/nav_item_home"
            app:bt_titlePadding="4dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_item_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:bt_colorActive="@color/white"
            app:bt_colorInactive="@color/white"
            app:bt_icon="@drawable/ic_courses"
            app:bt_shape="@drawable/transition_background_drawable"
            app:bt_title="@string/nav_item_course"
            app:bt_titlePadding="4dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_item_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:bt_colorActive="@color/white"
            app:bt_colorInactive="@color/white"
            app:bt_icon="@drawable/ic_classroom"
            app:bt_shape="@drawable/transition_background_drawable"
            app:bt_title="@string/nav_item_class"
            app:bt_titlePadding="4dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_item_exam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:bt_colorActive="@color/white"
            app:bt_colorInactive="@color/white"
            app:bt_icon="@drawable/ic_test"
            app:bt_shape="@drawable/transition_background_drawable"
            app:bt_title="@string/nav_item_exam"
            app:bt_titlePadding="4dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_item_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:bt_colorActive="@color/white"
            app:bt_colorInactive="@color/white"
            app:bt_icon="@drawable/ic_more"
            app:bt_shape="@drawable/transition_background_drawable"
            app:bt_title="@string/nav_item_more"
            app:bt_titlePadding="4dp" />
    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

</androidx.constraintlayout.widget.ConstraintLayout>