<?xml version="1.0" encoding="utf-8"?><!--
  ~ activity_edit_profile.xml Created by Samiur Prapon
  ~ Last modified  24/8/21, 12:51 am
  ~ Copyright (c) 2021. All rights reserved.
  ~
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.student.profile.EditProfileActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cardView"
        android:layout_marginBottom="-50dp"
        android:elevation="10dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="50dp">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                app:boxStrokeErrorColor="@color/red_800"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                app:layout_constraintWidth_percent=".80"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="#2F281E"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="24dp"
                app:boxStrokeErrorColor="@color/red_800"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                app:layout_constraintWidth_percent=".80"
                app:startIconDrawable="@drawable/ic_baseline_school_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_student_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/student_id"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="#2F281E"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_user_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/gender"
                android:textColor="@color/text_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/til_confirm_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/til_confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/til_confirm_password" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_male"
                    style="Widget.MaterialComponents.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:padding="12dp"
                    android:text="@string/male"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    app:useMaterialThemeColors="true" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rb_female"
                    style="Widget.MaterialComponents.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:padding="12dp"
                    android:text="@string/female"
                    android:textAlignment="textStart"
                    android:textAllCaps="false" />

            </RadioGroup>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_save"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@color/main_color"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/save"
                android:textAllCaps="false"
                android:enabled="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/til_confirm_password"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/til_confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        app:cardElevation="12dp"
        android:layout_marginBottom="-40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5">

        <ImageView
            android:id="@+id/image_view_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_person_24"
            android:padding="25dp"
            android:contentDescription="@string/user_profile_imageview"
            app:tint="@color/main_color" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>
